--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 * {
     margin: 0;
     padding: 0;
 }
-
+body{
+    font-family: "Poppins", sans-serif;
+}
 .margin-m1 {
     margin: 80px 0px;
 }
@@ -230,3 +233,39 @@ nav.sticky {
     color: #fff;
 }
 
+/* footer is start  */
+
+.footer{
+    padding: 80px 0;
+    background-color: #000;
+    color: #fff;
+}
+
+.footer ul {
+    list-style: none;
+}
+.footer ul li a {
+    text-decoration: none;
+    color: #fff;
+    text-transform: uppercase;
+    font-size: 12px;
+    color:#939090;
+}
+
+.footer-para{
+    font-size: 14px;
+}
+.footer-svg {
+
+    padding: 0 10px;
+}
+
+.footer-email input{
+    width: 80%;
+    height: 31px;
+    background-color: transparent;
+    color: #fff;
+    border: none;
+    border-bottom: 1px solid wheat;
+    outline: none;
+}
