--- a/css/style.css
+++ b/css/style.css
@@ -90,7 +90,11 @@ body {
   transition: all 0.3s ease;
   position: relative;
 }
-
+.ic0n-bg{
+  padding: 2px 5px !important;
+  font-size: 14px  !important;
+  font-weight: 600 !important;
+}
 .icon-link:hover {
   color: #667eea;
   transform: translateY(-2px) scale(1.1);
@@ -102,14 +106,13 @@ body {
 }
 .icon-link:hover .bi-heart {
   color: #ff4d6d;
-  transform: scale(1.2);
+  transform: scale(1);
 }
 
 /* Icon Badges */
 .cart-count, .fav-count {
-  font-size: 0.7rem;
+  font-size: 10px;
   padding: 2px 0px;
-  line-height: 1;
 }
 
 /* Make badges glow subtly */
@@ -127,6 +130,29 @@ body {
   animation: heartPulse 0.8s ease-in-out;
 }
 
+/* ✅ Success message (toast-style) */
+#success-message {
+  position: fixed;
+  top: -60px; /* hidden initially */
+  right: -8%;
+  transform: translateX(-50%);
+  background: linear-gradient(90deg, #28a745, #20c997);
+  color: white;
+  padding: 18px 34px;
+  border-radius: 6px;
+  font-size: 18px;
+  font-weight: 500;
+  box-shadow: 0 5px 15px rgba(0,0,0,0.2);
+  z-index: 9999;
+  opacity: 0;
+  transition: all 0.6s ease;
+}
+
+/* ✅ When active */
+#success-message.show {
+  top: 20px;
+  opacity: 1;
+}
 
 
 /* ---------- Common Classes ---------- */
