--- a/css/style.css
+++ b/css/style.css
@@ -45,10 +45,13 @@ body {
     .nav-link:hover {
       color: #667eea !important;
     }
-    .nav-link.active::after {
+    .nav-link.active{
+      color: #667eea !important;
+    }
+  .nav-link.active::after {
       content: "";
       position: absolute;
-      bottom: -6px;
+      bottom: -4px;
       left: 0;
       width: 100%;
       height: 2px;
